<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="?actionBarSize"
                android:padding="@dimen/appbar_padding"
                android:text="@string/alarm_page_title"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="116dp" android:src="@drawable/alarm"
                android:id="@+id/imageView" android:visibility="visible"/>
        <TextView
                android:text="@string/alarm_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:textAlignment="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:textStyle="bold"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/alarm_description"
                android:paddingBottom="20dp"
                android:textAlignment="center"
        />
        <Button
                android:text="@string/snooze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/snooze" android:onClick="snoozeClicked"/>
    </LinearLayout>
</LinearLayout>